# VibeScholar

./: CLAUDE.md  README.md  pyproject.toml
tests/: run_download.py  test_download_nature.py  test_download_sciencedirect.py
vibe_paper_search/: config.py
vibe_paper_search/browser/: __init__.py  session.py
vibe_paper_search/browser/watchdogs/: __init__.py
vibe_paper_search/mcp/: __init__.py  server.py
vibe_paper_search/papers/: models.py
vibe_paper_search/sites/: __init__.py  base.py  nature.py  sciencedirect.py
vibescholar/: __init__.py  config.py
vibescholar/browser/: __init__.py  captcha_handler.py  dom_service.py  session.py
vibescholar/browser/watchdogs/: __init__.py  auth_watchdog.py  captcha_watchdog.py  cookie_watchdog.py
vibescholar/mcp/: server.py
vibescholar/papers/: __init__.py
vibescholar/sites/: base.py  nature.py  sciencedirect.py
vibescholar/utils/: __init__.py
