[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-paper-search"
version = "0.1.0"
description = "AI-powered academic paper search, download, and categorization tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
keywords = ["academic", "papers", "search", "pdf", "ai", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "pymupdf>=1.23.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
ai = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]

[project.scripts]
vibe-paper-search = "vibe_paper_search.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["vibe_paper_search"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
